--- a/mystyle.css
+++ b/mystyle.css
@@ -20,6 +20,7 @@ logo{
 	right:0;
 	float: left;
 	}
+
 .logo img{
 	max-width: 100%;
 	max-height: 100%;
@@ -32,6 +33,26 @@ logo{
 .description{
 	display: block;
 	position: static;
-	top:
-	float: left;
+}
+
+.description table{
+	margin: auto;
+	padding: 0px;
+	border-collapse: collapse;
+	border-width: 0px;
+	display: block;
+	overflow: auto;
+}
+.description figure{
+	padding: 0;
+}
+
+.list{
+	width: 40%;
+	margin: auto;
+}
+
+
+.cancel p{
+	font-size-adjust: -10%;
 }
