Lost code from committing gh pages
Re-added code from gh-pages

--- a/mystyle.css
+++ b/mystyle.css
@@ -29,9 +29,29 @@ logo{
 	right: 0;
 }
 
-.description{
+..description{
 	display: block;
 	position: static;
-	top:
-	float: left;
+}
+
+.description table{
+	margin: auto;
+	padding: 0px;
+	border-collapse: collapse;
+	border-width: 0px;
+	display: block;
+	overflow: auto;
+}
+.description figure{
+	padding: 0;
+}
+
+.list{
+	width: 40%;
+	margin: auto;
+}
+
+
+.cancel p{
+	font-size-adjust: -10%;
 }
